
Release 5.0.9 (unreleased)
==========================

Bug fixes
---------

- Compressible model: fix inverted arguments for user velocity source terms.

- Radiative model: fix GUI-defined BC selection between reflecting wall and
  prescribed flux BC for grey/black wall.

- GUI: fix various crashes with th PyQt API 2(mostly on systems using PyQt5,
  as these default to the concerned API).

- GUI: fixes for addition and handling of coal classes.

- Fix an uninitialised option (reconstruction flag) if arakawa coef. is 0 and
  there is anisotropic diffusion on pressure increment.

- GUI: fix bug for RSM coupled solver in the initilization of turbulent 
  variables by formula.

- GUI: fix default time stepping type (unsteady) when information missing
  from the XML file.

- Fix for missing legacy (Fortran) cs_user_head_losses.f90 file from
  installed reference files.

- Fix face external force projection with tensorial diffusion
  and porous models 1, 2.
  This was impacting cases with head losses, improved pressure interpolation,
  and scalar or tensorial volume porosity models (iporos=1, 2).

- Fix Python 3 integer divison issues for code-code coupling process count
  distribution and batch duration conversions.

- Fix missing handling of isotropic mesh viscosity for ALE restart.

- Fix in severe accident (mass source terms for metal modelling).

- Fix crash in some polygon triangulation cases.

- Fix incorrect GUI-defined DOF locking for coupling with code_aster.

- Fix incorrect access to per-scalar density in some cases.

- Fix error on unconverged linear solver using PETSc.

- Fix empty mesh in error postprocessing for linear solvers.

- Fix for possible bug in postprocessing edges mesh extraction.

- Fix for OpenMP multigrid-preconditioned Conjugate Gradient convergence issue.
  This requires using a flexible variant of the Conjugate Gradient when
  using a Gauss-Seidel smoother with multiple threads.
