@@ -4,6 +4,7 @@ Release 5.0.9 (unreleased)
 
 Bug fixes
 ---------
+- Lagrangian module: fix resuspension when having internal deposition.
 
 - Compressible model: fix inverted arguments for user velocity source terms.
 
@@ -18,7 +19,7 @@ Bug fixes
 - Fix an uninitialised option (reconstruction flag) if arakawa coef. is 0 and
   there is anisotropic diffusion on pressure increment.
 
-- GUI: fix bug for RSM coupled solver in the initilization of turbulent 
+- GUI: fix bug for RSM coupled solver in the initilization of turbulent
   variables by formula.
 
 - GUI: fix default time stepping type (unsteady) when information missing
